--- a/css/layout.css
+++ b/css/layout.css
@@ -73,7 +73,7 @@ header .banner-text h1 {
 }
 header .banner-text h3 {
   font: 18px/1.9em "librebaskerville-regular", serif;
-  color: #a8a8a8;
+  color: #c7c6c6;
   margin: 0 auto;
   width: 70%;
   text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
@@ -229,8 +229,9 @@ ul#nav li.current a {
   margin-bottom: 12px;
 }
 #about p {
+  font: 17px/1.9em "librebaskerville-regular", serif;
   line-height: 30px;
-  color: #7a7a7a;
+  color: #b3b2b2;
 }
 #about .profile-pic {
   position: relative;
